--- a/pages/18070.html
+++ b/pages/18070.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -1238,7 +1238,7 @@ margin-left: 0em;
 <p>Review includes</p>
 
 <ul>
-<li id="LambrechtsVolic14"><a class="existingWikiWord" href="/nlab/show/Pascal+Lambrechts">Pascal Lambrechts</a>, Ismar Volic, section 5 of <em>Formality of the little N-disks operad</em>, Memoirs of the American Mathematical Society ; no. 1079, 2014 (<a href="https://arxiv.org/abs/0808.0457">arXiv“0808.0457</a>, <a href="http://dx.doi.org/10.1090/memo/1079">doi:10.1090/memo/1079</a>)</li>
+<li id="LambrechtsVolic14"><a class="existingWikiWord" href="/nlab/show/Pascal+Lambrechts">Pascal Lambrechts</a>, <a class="existingWikiWord" href="/nlab/show/Ismar+Voli%C4%87">Ismar Volić</a>, section 5 of <em>Formality of the little N-disks operad</em>, Memoirs of the American Mathematical Society ; no. 1079, 2014 (<a href="https://arxiv.org/abs/0808.0457">arXiv“0808.0457</a>, <a href="http://dx.doi.org/10.1090/memo/1079">doi:10.1090/memo/1079</a>)</li>
 </ul>
 
 <p>This underlies the models of configuration spaces by <a class="existingWikiWord" href="/nlab/show/graph+complexes">graph complexes</a>, see there for more.</p>
@@ -1278,14 +1278,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November  4, 2018 at 04:00:31.
+  Last revised on November  4, 2018 at 08:48:02.
   See the <a href="https://ncatlab.org/nlab/history/configuration space of points" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/configuration+space+of+points" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/configuration+space+of+points/28" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(28 revisions)</span> | <a href="/nlab/show/diff/configuration+space+of+points" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/configuration+space+of+points" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/configuration+space+of+points" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/configuration+space+of+points/29" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(29 revisions)</span> | <a href="/nlab/show/diff/configuration+space+of+points" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/configuration+space+of+points" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/configuration space of points/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
