--- a/pages/19907.html
+++ b/pages/19907.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -1296,7 +1296,7 @@ margin-left: 0em;
 <p>A full proof is spelled out in</p>
 
 <ul>
-<li id="LambrechtsVolic14"><a class="existingWikiWord" href="/nlab/show/Pascal+Lambrechts">Pascal Lambrechts</a>, Ismar Volic, sections 6 and 7 of <em>Formality of the little N-disks operad</em>, Memoirs of the American Mathematical Society ; no. 1079, 2014 (<a href="https://arxiv.org/abs/0808.0457">arXiv:0808.0457</a>, <a href="http://dx.doi.org/10.1090/memo/1079">doi:10.1090/memo/1079</a>)</li>
+<li id="LambrechtsVolic14"><a class="existingWikiWord" href="/nlab/show/Pascal+Lambrechts">Pascal Lambrechts</a>, <a class="existingWikiWord" href="/nlab/show/Ismar+Voli%C4%87">Ismar Volić</a>, sections 6 and 7 of <em>Formality of the little N-disks operad</em>, Memoirs of the American Mathematical Society ; no. 1079, 2014 (<a href="https://arxiv.org/abs/0808.0457">arXiv:0808.0457</a>, <a href="http://dx.doi.org/10.1090/memo/1079">doi:10.1090/memo/1079</a>)</li>
 </ul>
 
 <p>Further discussion of the graph complex as a model for the <a class="existingWikiWord" href="/nlab/show/de+Rham+cohomology">de Rham cohomology</a> of <a class="existingWikiWord" href="/nlab/show/configuration+spaces+of+points">configuration spaces of points</a> is in</p>
@@ -1320,14 +1320,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November  4, 2018 at 02:53:34.
+  Last revised on November  4, 2018 at 08:45:48.
   See the <a href="https://ncatlab.org/nlab/history/the little n-disk operad is formal" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/the+little+n-disk+operad+is+formal" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/the+little+n-disk+operad+is+formal/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/the+little+n-disk+operad+is+formal" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/the+little+n-disk+operad+is+formal" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/the+little+n-disk+operad+is+formal" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/the+little+n-disk+operad+is+formal/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/the+little+n-disk+operad+is+formal" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/the+little+n-disk+operad+is+formal" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/the little n-disk operad is formal/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
