--- a/pages/19909.html
+++ b/pages/19909.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Pascal Lambrechts in nLab
+      Ismar Volić in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -284,7 +284,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Pascal Lambrechts
+      Ismar Volić
   </h1>
 
 
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9225/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9233/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -312,7 +312,7 @@ margin-left: 0em;
 <head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title></title></head>
 <body>
 <ul>
-<li><a href="https://uclouvain.be/fr/repertoires/pascal.lambrechts">webpage</a></li>
+<li><a href="https://www.wellesley.edu/math/faculty/volici">webpage</a></li>
 </ul>
 
 <h2 id="selected_writings">selected writings</h2>
@@ -321,15 +321,11 @@ margin-left: 0em;
 <li id="LambrechtsVolic14"><a class="existingWikiWord" href="/nlab/show/Pascal+Lambrechts">Pascal Lambrechts</a>, <a class="existingWikiWord" href="/nlab/show/Ismar+Voli%C4%87">Ismar Volić</a>, <em>Formality of the little N-disks operad</em>, Memoirs of the American Mathematical Society; no. 1079, 2014 (<a href="https://arxiv.org/abs/0808.0457">arXiv:0808.0457</a>, <a href="http://dx.doi.org/10.1090/memo/1079">doi:10.1090/memo/1079</a>)</li>
 </ul>
 
-<h2 id="related_lab_entries">related <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>Lab entries</h2>
+<h2 id="related_lab_entries">Related <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/configuration+space+of+points">configuration space of points</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/Fulton-MacPherson+operad">Fulton-MacPherson operad</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/graph+complex">graph complex</a></p>
 </li>
 
 <li>
@@ -338,6 +334,14 @@ margin-left: 0em;
 
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/formality+of+the+little+n-disk+operad">formality of the little n-disk operad</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/configuration+space+of+points">configuration space of points</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Fulton-MacPherson+compactification">Fulton-MacPherson compactification</a></p>
 </li>
 
 <li>
@@ -350,22 +354,22 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November  4, 2018 at 08:51:07.
-  See the <a href="https://ncatlab.org/nlab/history/Pascal Lambrechts" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Created on November  4, 2018 at 08:50:29.
+  See the <a href="https://ncatlab.org/nlab/history/Ismar Volić" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Pascal+Lambrechts" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Pascal+Lambrechts/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Pascal+Lambrechts" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Pascal+Lambrechts" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  | <a href="https://ncatlab.org/nlab/show/Pascal Lambrechts/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/Ismar+Voli%C4%87" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  | <a href="https://ncatlab.org/nlab/show/Ismar Volić/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/Pascal+Lambrechts" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Ismar+Voli%C4%87" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/Pascal+Lambrechts" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Ismar+Voli%C4%87" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Pascal+Lambrechts" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Ismar+Voli%C4%87" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
