--- a/pages/19905.html
+++ b/pages/19905.html
@@ -1412,20 +1412,32 @@ margin-left: 0em;
 <ul>
 <li id="Salvatore01">Paolo Salvatore, <em>Configuration spaces with summable labels</em>, Cohomological methods in homotopy theory. Birkhäuser, Basel, 2001. 375-395.</li>
 </ul>
+
+<p>The interpretation of the quasi-isomorphism establishing <a class="existingWikiWord" href="/nlab/show/formality+of+the+little+n-disk+operad">formality of the little n-disk operad</a> as sending edges to <a class="existingWikiWord" href="/nlab/show/Feynman+propagators">Feynman propagators</a> of some <a class="existingWikiWord" href="/nlab/show/topological+quantum+field+theory">topological quantum field theory</a> is due to</p>
+
+<ul>
+<li id="BottCattaneo97"><a class="existingWikiWord" href="/nlab/show/Raoul+Bott">Raoul Bott</a>, <a class="existingWikiWord" href="/nlab/show/Alberto+Cattaneo">Alberto Cattaneo</a>, Remark 3.6 in <em>Integral invariants of 3-manifolds</em>, J. Diff. Geom., 48 (1998) 91-133 (<a href="https://arxiv.org/abs/dg-ga/9710001">arXiv:dg-ga/9710001</a>)</li>
+</ul>
+
+<p>which is re-amplified in</p>
+
+<ul>
+<li id="CattaneoMnev10"><a class="existingWikiWord" href="/nlab/show/Alberto+Cattaneo">Alberto Cattaneo</a>, <a class="existingWikiWord" href="/nlab/show/Pavel+Mnev">Pavel Mnev</a>, Remark 11 in <em>Remarks on Chern-Simons invariants</em>, Commun.Math.Phys.293:803-836,2010 (<a href="https://arxiv.org/abs/0811.2045">arXiv:0811.2045</a>)</li>
+</ul>
 </body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on November  4, 2018 at 08:45:28.
+  Last revised on November  4, 2018 at 09:39:50.
   See the <a href="https://ncatlab.org/nlab/history/Fulton-MacPherson operad" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Fulton-MacPherson+operad" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Fulton-MacPherson+operad/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/Fulton-MacPherson+operad" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Fulton-MacPherson+operad" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Fulton-MacPherson+operad" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Fulton-MacPherson+operad/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/Fulton-MacPherson+operad" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Fulton-MacPherson+operad" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Fulton-MacPherson operad/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
