--- a/pages/2575.html
+++ b/pages/2575.html
@@ -2327,19 +2327,17 @@ q = e^{\frac{2 \pi i}{k+2}}.
 
 <p>Discussion of <a class="existingWikiWord" href="/nlab/show/perturbation+theory">perturbative quantization</a> of Chern-Simons theory is in</p>
 
-<ul id="AxelrodSinger">
-<li>
+<ul>
+<li id="AxelrodSinger">
 <p><a class="existingWikiWord" href="/nlab/show/Scott+Axelrod">Scott Axelrod</a>, <a class="existingWikiWord" href="/nlab/show/Isadore+Singer">Isadore Singer</a>,</p>
 
-<p><em>Chern-Simons Perturbation Theory</em> (<a href="http://arxiv.org/abs/hep-th/9110056">arXiv:hep-th/9110056</a>)</p>
+<p><em>Chern-Simons Perturbation Theory</em>, in S. Catto, A. Rocha (eds.) Proc. XXthe DGM Conf. World Scientific Singapore, 1992, 3-45; (<a href="http://arxiv.org/abs/hep-th/9110056">arXiv:hep-th/9110056</a>)</p>
 
-<p><em>Chern–Simons Perturbation Theory II</em> (<a href="http://arxiv.org/abs/hep-th/9304087">arXiv</a>)</p>
+<p><em>Chern–Simons Perturbation Theory II</em>, J. Diff. Geom. 39 (1994) 173-213 (<a href="http://arxiv.org/abs/hep-th/9304087">arXiv:hep-th/9304087</a>)</p>
 </li>
-</ul>
 
-<ul id="Kontsevich">
-<li><a class="existingWikiWord" href="/nlab/show/Maxim+Kontsevich">Maxim Kontsevich</a>, <em>Feynman diagrams and low-dimensional topology</em>, in First European Congress of Mathematics, Vol. II (Paris, 1992), volume 120 of Progr. Math., pages 97–121,
-<p>Birkhäuser, Basel, 1994.</p>
+<li id="Kontsevich">
+<p><a class="existingWikiWord" href="/nlab/show/Maxim+Kontsevich">Maxim Kontsevich</a>, <em>Feynman diagrams and low-dimensional topology</em>, in First European Congress of Mathematics, Vol. II (Paris, 1992), volume 120 of Progr. Math., pages 97–121, Birkhäuser, Basel, 1994. (<a href="https://www.ihes.fr/~maxim/TEXTS/Feynman%20%20diagrams%20and%20low-dimensional%20topology.pdf">pdf</a>)</p>
 </li>
 </ul>
 
@@ -2468,14 +2466,14 @@ q = e^{\frac{2 \pi i}{k+2}}.
 
 <div class="revisedby">
   <p>
-  Last revised on October 29, 2018 at 12:43:09.
+  Last revised on November  4, 2018 at 11:41:46.
   See the <a href="https://ncatlab.org/nlab/history/Chern-Simons theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Chern-Simons+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Chern-Simons+theory/98" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(98 revisions)</span> | <a href="/nlab/show/diff/Chern-Simons+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Chern-Simons+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Chern-Simons+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Chern-Simons+theory/99" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(99 revisions)</span> | <a href="/nlab/show/diff/Chern-Simons+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Chern-Simons+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Chern-Simons theory/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
