--- a/pages/16762.html
+++ b/pages/16762.html
@@ -332,7 +332,13 @@ margin-left: 0em;
 <h2 id="examples">Examples</h2>
 
 <ul>
-<li><a class="existingWikiWord" href="/nlab/show/Bridgeland+stability">Bridgeland stability</a> over resolution of <a class="existingWikiWord" href="/nlab/show/ADE-singularities">ADE-singularities</a>: see <a href="Bridgeland+stability+condition#OverResolutionsOfADESingularities">there</a></li>
+<li>
+<p>the <a class="existingWikiWord" href="/nlab/show/Fulton-MacPherson+compactification">Fulton-MacPherson compactification</a> of <a class="existingWikiWord" href="/nlab/show/configuration+spaces+of+points">configuration spaces of points</a> may be regarded as resolution of the <a class="existingWikiWord" href="/nlab/show/fat+diagonal">fat diagonal</a> inside an iterated <a class="existingWikiWord" href="/nlab/show/Cartesian+product">Cartesian product</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Bridgeland+stability">Bridgeland stability</a> over resolution of <a class="existingWikiWord" href="/nlab/show/ADE-singularities">ADE-singularities</a>: see <a href="Bridgeland+stability+condition#OverResolutionsOfADESingularities">there</a></p>
+</li>
 </ul>
 
 <h2 id="related_concept">Related concept</h2>
@@ -364,14 +370,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 30, 2018 at 08:54:59.
+  Last revised on November  4, 2018 at 12:58:30.
   See the <a href="https://ncatlab.org/nlab/history/resolution of singularities" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/resolution+of+singularities" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/resolution+of+singularities/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/resolution+of+singularities" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/resolution+of+singularities" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/resolution+of+singularities" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/resolution+of+singularities/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/resolution+of+singularities" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/resolution+of+singularities" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/resolution of singularities/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
