--- a/pages/4700.html
+++ b/pages/4700.html
@@ -712,6 +712,10 @@ margin-left: 0em;
 
 <p>This function <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo>∂</mo></mrow><annotation encoding="application/x-tex">\partial</annotation></semantics></math> is indeed a differential, in that it satisfies <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mo>∂</mo> <mn>2</mn></msup><mo>=</mo><mn>0</mn></mrow><annotation encoding="application/x-tex">\partial^2 = 0</annotation></semantics></math>, because two contractions in different order produce a different orientation.</p>
 
+<blockquote>
+<p>some details missing here…</p>
+</blockquote>
+
 <p>The resulting <a class="existingWikiWord" href="/nlab/show/chain+complex">chain complex</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">(</mo><msub><mi>𝒢</mi> <mo>•</mo></msub><mo>,</mo><mo>∂</mo><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">(\mathcal{G}_\bullet, \partial)</annotation></semantics></math> is called the <em>graph complex</em>. Its <a class="existingWikiWord" href="/nlab/show/chain+homology">chain homology</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>H</mi> <mo>•</mo></msub><mo stretchy="false">(</mo><mi>𝒢</mi><mo>,</mo><mo>∂</mo><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">H_\bullet(\mathcal{G}, \partial)</annotation></semantics></math> is called <em>graph homology</em>.</p>
 
 <p>This is originally due to (<a href="#Kontsevich94">Kontsevich 94, pages 11-12</a>). For a detailed and careful account see <a href="#LambrechtsVolic14">Lambrechts-Volic 14, section 6</a>.</p>
@@ -796,7 +800,7 @@ margin-left: 0em;
 
 <ul>
 <li id="Kontsevich94">
-<p><a class="existingWikiWord" href="/nlab/show/Maxim+Kontsevich">Maxim Kontsevich</a>, pages 11-12 of <em>Feynman diagrams and low-dimensional topology</em>, First European Congress of Mathematics, 1992, Paris, vol. II, Progress in Mathematics <strong>120</strong>, Birkhäuser (1994), 97–121, <a href="http://www.ihes.fr/~maxim/TEXTS/Feynman%20%20diagrams%20and%20low-dimensional%20topology.pdf">pdf</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/Maxim+Kontsevich">Maxim Kontsevich</a>, pages 11-12 of <em>Feynman diagrams and low-dimensional topology</em>, First European Congress of Mathematics, 1992, Paris, vol. II, Progress in Mathematics <strong>120</strong>, Birkhäuser (1994), 97–121 (<a href="http://www.ihes.fr/~maxim/TEXTS/Feynman%20%20diagrams%20and%20low-dimensional%20topology.pdf">pdf</a>)</p>
 </li>
 
 <li id="Kontsevich99b">
@@ -903,14 +907,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November  4, 2018 at 08:40:16.
+  Last revised on November  4, 2018 at 12:43:03.
   See the <a href="https://ncatlab.org/nlab/history/graph complex" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/graph+complex" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/graph+complex/26" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(26 revisions)</span> | <a href="/nlab/show/diff/graph+complex" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/graph+complex" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/graph+complex" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/graph+complex/27" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(27 revisions)</span> | <a href="/nlab/show/diff/graph+complex" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/graph+complex" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/graph complex/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
