--- a/pages/19887.html
+++ b/pages/19887.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9203/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9203/#Item_3" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -788,6 +788,8 @@ margin-left: 0em;
   \,.
 
 </annotation></semantics></math></div>
+<p>Similarly, the <em><a class="existingWikiWord" href="/nlab/show/blowup">blowup</a></em> of the fat diagonal in <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>X</mi> <mi>n</mi></msup></mrow><annotation encoding="application/x-tex">X^n</annotation></semantics></math> yields the <a class="existingWikiWord" href="/nlab/show/Fulton-MacPherson+compactification">Fulton-MacPherson compactification</a> of <a class="existingWikiWord" href="/nlab/show/configuration+spaces+of+points">configuration spaces of points</a>.</p>
+
 <h3 id="relation_to_renormalization">Relation to renormalization</h3>
 
 <p>Closely related to the role of the fat diagonal in <a class="existingWikiWord" href="/nlab/show/configuration+spaces">configuration spaces</a> is its role in <a class="existingWikiWord" href="/nlab/show/renormalization">renormalization</a> of <a class="existingWikiWord" href="/nlab/show/perturbative+quantum+field+theories">perturbative quantum field theories</a>, which may be formulated as the choice of <a class="existingWikiWord" href="/nlab/show/extensions+of+distributions">extensions of distributions</a> (of <a class="existingWikiWord" href="/nlab/show/time-ordered+products">time-ordered products</a>) from the <a class="existingWikiWord" href="/nlab/show/complement">complement</a> of a fat diagonal to the fat diagonal (the locus of coinciding “<a class="existingWikiWord" href="/nlab/show/virtual+particles">virtual particles</a>” where <a class="existingWikiWord" href="/nlab/show/interactions">interactions</a> take place).</p>
@@ -799,14 +801,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 28, 2018 at 12:51:15.
+  Last revised on November  4, 2018 at 13:01:23.
   See the <a href="https://ncatlab.org/nlab/history/fat diagonal" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/fat+diagonal" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/fat+diagonal/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/fat+diagonal" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/fat+diagonal" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/fat+diagonal" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/fat+diagonal/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/fat+diagonal" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/fat+diagonal" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/fat diagonal/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
