--- a/pages/2575.html
+++ b/pages/2575.html
@@ -2341,6 +2341,8 @@ q = e^{\frac{2 \pi i}{k+2}}.
 </li>
 </ul>
 
+<p>See also at <em><a class="existingWikiWord" href="/nlab/show/Fulton-MacPherson+compactification">Fulton-MacPherson compactification</a> of <a class="existingWikiWord" href="/nlab/show/configuration+spaces+of+points">configuration spaces of points</a></em>.</p>
+
 <p>Perturbative quantization along the lines of <em><a href="renormalization#OfTheoriesInBVForm">Renormalization - Of theories in BV-CS form</a></em> is in</p>
 
 <ul>
@@ -2466,14 +2468,14 @@ q = e^{\frac{2 \pi i}{k+2}}.
 
 <div class="revisedby">
   <p>
-  Last revised on November  4, 2018 at 11:41:46.
+  Last revised on November  4, 2018 at 13:08:59.
   See the <a href="https://ncatlab.org/nlab/history/Chern-Simons theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Chern-Simons+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Chern-Simons+theory/99" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(99 revisions)</span> | <a href="/nlab/show/diff/Chern-Simons+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Chern-Simons+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Chern-Simons+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Chern-Simons+theory/100" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(100 revisions)</span> | <a href="/nlab/show/diff/Chern-Simons+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Chern-Simons+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Chern-Simons theory/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
