--- a/pages/4700.html
+++ b/pages/4700.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -821,8 +821,8 @@ margin-left: 0em;
 <p><a class="existingWikiWord" href="/nlab/show/Ricardo+Campos">Ricardo Campos</a>, <a class="existingWikiWord" href="/nlab/show/Thomas+Willwacher">Thomas Willwacher</a>, <em>A model for configuration spaces of points</em> (<a href="https://arxiv.org/abs/1604.02043">arXiv:1604.02043</a>)</p>
 </li>
 
-<li>
-<p>Ricardo Campos, Najib Idrissi, <a class="existingWikiWord" href="/nlab/show/Pascal+Lambrechts">Pascal Lambrechts</a>, <a class="existingWikiWord" href="/nlab/show/Thomas+Willwacher">Thomas Willwacher</a>, <em>Configuration Spaces of Manifolds with Boundary</em> (<a href="https://arxiv.org/abs/1802.00716">arXiv:1802.00716</a>)</p>
+<li id="CamposIdrissiLambrechtsWillwacher18">
+<p><a class="existingWikiWord" href="/nlab/show/Ricardo+Campos">Ricardo Campos</a>, Najib Idrissi, <a class="existingWikiWord" href="/nlab/show/Pascal+Lambrechts">Pascal Lambrechts</a>, <a class="existingWikiWord" href="/nlab/show/Thomas+Willwacher">Thomas Willwacher</a>, <em>Configuration Spaces of Manifolds with Boundary</em> (<a href="https://arxiv.org/abs/1802.00716">arXiv:1802.00716</a>)</p>
 </li>
 
 <li>
@@ -907,14 +907,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November  4, 2018 at 12:43:03.
+  Last revised on November  5, 2018 at 00:57:33.
   See the <a href="https://ncatlab.org/nlab/history/graph complex" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/graph+complex" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/graph+complex/27" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(27 revisions)</span> | <a href="/nlab/show/diff/graph+complex" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/graph+complex" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/graph+complex" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/graph+complex/28" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(28 revisions)</span> | <a href="/nlab/show/diff/graph+complex" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/graph+complex" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/graph complex/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
